syntax = "proto3";

package checkNEventsState;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Civil/tg-simple-regex-antisapm/filters/types/checkNeventsState";

message State {
  bool verified = 1;
  map<int64, bool> message_ids = 2;
  google.protobuf.Timestamp last_update = 3;
}