syntax = "proto3";
package message;

option go_package = "github.com/Civil/tg-simple-regex-antisapm/filters/types/message";


message From {
  uint64 id = 1;
  bool is_bot = 2;
  string first_name = 3;
  string username = 4;
}
message Chat {
  int64 id = 1;
  string type = 2;
  string title = 3;
  string username = 4;
}
message Sender_user {
  uint64 id = 1;
  bool is_bot = 2;
  string first_name = 3;
  string username = 4;
  bool is_premium = 5;
}
message Forward_origin {
  string type = 1;
  uint32 date = 2;
  Sender_user sender_user = 3;
}
message Entities {
  string type = 1;
  uint32 offset = 2;
  uint32 length = 3;
}

message Reply_to_message {
  uint32 message_id = 1;
  uint32 message_thread_id = 2;
  From from = 3;
  uint32 date = 4;
  Chat chat = 5;
  string text = 6;
}

message Photo {
  string file_id = 1;
  string file_unique_id = 2;
  uint32 width = 3;
  uint32 height = 4;
  uint32 file_size = 5;
}

message Message {
  uint32 message_id = 1;
  uint32 message_thread_id = 2;
  From from = 3;
  uint32 date = 4;
  Chat chat = 5;
  Forward_origin forward_origin = 6;
  string text = 7;
  repeated Entities entities = 8;
  Reply_to_message reply_to_message = 9;
  repeated Photo photo = 10;
  string caption = 11;
}


//